Add a header title, paragraphs and instructions to access financial results

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>M4 Challenge</title>
 </head>
 <body>
+
+  <h1>Financial Dataset Records</h1>
+  <h2>Console Finances</h2>
+  <p>Creating a code for analyzing the financial records of a company.</p>
+  <p>To access financial results:</p>
+  <ul>
+    <li>Right click and select "inspect".</li>
+    <li>Now, select the "console" to financial information.</li>
+  </ul>
+  
   <script src="index.js"></script>
 </body>
 </html>
